--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
             android:roundIcon="@mipmap/fuel_bg_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".StatisticsActivity">
+        </activity>
         <activity android:name=".CreateFillUpActivity">
         </activity>
         <activity
